# MindfulSounds

./: README.md
aws/: ecs_setup.py  s3_setup.py
backend/: app.py  pyproject.toml  requirements.txt
frontend/: package-lock.json  package.json  tsconfig.json  webpack.config.js
frontend/src/: index.html  index.js  index.ts  styles.css
frontend/src/app/: page.tsx
server/: pyproject.toml
server/src/: app.py  main.py
server/src/models/: user.py
server/src/resources/: user_detail_resource.py  user_resource.py
